--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 /* Styling for the ngProgress itself */
 #ngProgress {
-  background-color: #6C9032 !important;
+  background-color: #F8CF51 !important;
   box-shadow: none !important;
   color: #373D42 !important;
   height: 3px !important;
@@ -115,7 +115,7 @@ margin-left: 0;
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {background-color: #373D42;}
 
 .navbar-default {
-  background-color: #8DC429;
+  background-color: #4d4d4d;
   margin: 0;
   border: 0;
 }
@@ -156,6 +156,10 @@ margin-left: 0;
   overflow: hidden;
 }
 
+.rehive-logo img {
+  padding-top: 8px;
+}
+
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
   color: #fffffe;
 }
@@ -166,7 +170,7 @@ margin-left: 0;
 }
 
 .navbar-form .form-control {
-  background-color: #7CAD23;
+  background-color: #757575;
   border-radius: 3px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -216,7 +220,7 @@ margin-left: 0;
 .status {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
-  background-color: #597338;
+  background-color: #757575;
   border-radius: 3px;
   margin: 15px 0;
   padding: 8px 10px;
@@ -316,8 +320,8 @@ margin-left: 0;
   border-radius: 2px;
 }
 .btn-primary {
-  background-color: #8DC429;
-  border: 2px solid #76AF0F;
+  background-color: #F8CF51;
+  border: 2px solid #F8CF51;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active,
@@ -363,7 +367,7 @@ margin-left: 0;
 }
 
 .txvalues-primary {
-  background-color: #8DC429;
+  background-color: #F8CF51;
 }
 
 .txvalues-default {
@@ -386,7 +390,7 @@ margin-left: 0;
   font-size: 14px;
   font-weight: normal;
 }
-.progress-bar-info { background-color: #8DC429; }
+.progress-bar-info { background-color: #F8CF51; }
 
 /* Set the fixed height of the footer here */
 #footer {
@@ -826,7 +830,7 @@ a.v_highlight_more {
   }
   .txvalues-primary {
     background: none;
-    color: #8DC429;
+    color: #F8CF51;
   }
   .txvalues-default {
     background: none;
