--- a/public/views/includes/header.html
+++ b/public/views/includes/header.html
@@ -7,7 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="insight navbar-brand" href=".">insight</a>
+      <a class="rehive-logo" href=".">
+        <img style="width: 120px;" src="/img/rehive-logo.svg">
+      </a>
     </div>
     <div class="navbar-collapse collapse" collapse="$root.isCollapsed">
       <ul class="nav navbar-nav">
