Added link to Rehive

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -61,7 +61,7 @@
 
       <div class="col-xs-12 col-md-4 col-gray">
         <h2 translate>About</h2>
-        <p translate>Welcome to Rehive's <a href="https://insight.is/"
+        <p translate>Welcome to <a href="https://rehive.com">Rehive</a>'s <a href="https://insight.is/"
           target="_blank">Insight</a> Bitcoin node.
         </p>
         <div id="powered" class="row">
